tests/fixtures/negative/interrupt_event_call.wrela
// expect: SEM0042: executor on interrupt handlers are no longer supported; use path-owned interrupt topics
module negative.interrupt_event_call

data SerialInterrupt { vector: U8 }

driver path SerialConsolePath {
    interrupt receiver -> SerialInterrupt {
        return SerialInterrupt(vector = 1)
    }
}

executor BadCall {
    serial: SerialConsolePath

    on serial.interrupt(serial_payload: SerialInterrupt) {
        self.serial.interrupt()
    }
}
